; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscFunctionImpl.c_min_func_setup.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscFunctionImpl.c_min_func_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@type = common dso_local global i32 0, align 4
@INT32_MAX = common dso_local global i32 0, align 4
@FLT_MAX = common dso_local global float 0.000000e+00, align 4
@DBL_MAX = common dso_local global double 0.000000e+00, align 8
@INT64_MAX = common dso_local global i32 0, align 4
@INT16_MAX = common dso_local global i32 0, align 4
@INT8_MAX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"illegal data type:%d in min/max query\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @min_func_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @min_func_setup(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = call i32 @function_setup(%struct.TYPE_4__* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %53

8:                                                ; preds = %1
  %9 = call i32 (...) @GET_TRUE_DATA_TYPE()
  %10 = load i32, i32* @type, align 4
  switch i32 %10, label %47 [
    i32 130, label %11
    i32 131, label %17
    i32 132, label %23
    i32 133, label %29
    i32 129, label %35
    i32 128, label %41
  ]

11:                                               ; preds = %8
  %12 = load i32, i32* @INT32_MAX, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to i32*
  store i32 %12, i32* %16, align 4
  br label %52

17:                                               ; preds = %8
  %18 = load float, float* @FLT_MAX, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to float*
  store float %18, float* %22, align 4
  br label %52

23:                                               ; preds = %8
  %24 = load double, double* @DBL_MAX, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to double*
  store double %24, double* %28, align 8
  br label %52

29:                                               ; preds = %8
  %30 = load i32, i32* @INT64_MAX, align 4
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = inttoptr i64 %33 to i32*
  store i32 %30, i32* %34, align 4
  br label %52

35:                                               ; preds = %8
  %36 = load i32, i32* @INT16_MAX, align 4
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = inttoptr i64 %39 to i32*
  store i32 %36, i32* %40, align 4
  br label %52

41:                                               ; preds = %8
  %42 = load i32, i32* @INT8_MAX, align 4
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = inttoptr i64 %45 to i32*
  store i32 %42, i32* %46, align 4
  br label %52

47:                                               ; preds = %8
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = call i32 @pError(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %50)
  br label %52

52:                                               ; preds = %47, %41, %35, %29, %23, %17, %11
  store i32 1, i32* %2, align 4
  br label %53

53:                                               ; preds = %52, %7
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @function_setup(%struct.TYPE_4__*) #1

declare dso_local i32 @GET_TRUE_DATA_TYPE(...) #1

declare dso_local i32 @pError(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
